Fixed alignment issue with caret on accordion

--- a/src/components/details/_details.scss
+++ b/src/components/details/_details.scss
@@ -114,7 +114,10 @@ $details-caret-width: 1.1rem;
 
       &:before,
       &:after {
-        top: 1.45rem;
+        top: 1.1rem;
+        @include mq(s) {
+          top: 1.45rem;
+        }
       }
 
       &:focus {
@@ -139,7 +142,7 @@ $details-caret-width: 1.1rem;
     &__content {
       margin: 0;
       border-left: 0;
-      padding: 0 0 0 1.5em;
+      padding: 0;
     }
   }
 }
